--- a/src/Components/Content/Catalog/Item/Item.css
+++ b/src/Components/Content/Catalog/Item/Item.css
@@ -1,6 +1,6 @@
 .item {
-  flex: 0 0 220px;
-  height: 272px;
+  flex: 0 0 13.75rem;
+  height: 17rem;
   margin: 8px;
   border-radius: 10px;
   text-decoration: none;
@@ -33,8 +33,8 @@
 
 .item__name {
   text-align: center;
-  margin: 0px;
   justify-content: center;
+  margin: 0px;
   height: 40px;
   font-weight: 400;
   font-size: 18px;
@@ -42,8 +42,8 @@
 }
 
 .item__price {
-  margin: 0px;
   justify-content: center;
+  margin: 0px;
   height: 20px;
   text-align: center;
 }
