--- a/src/Components/Content/Catalog/Item/Item.css
+++ b/src/Components/Content/Catalog/Item/Item.css
@@ -1,8 +1,8 @@
 .item {
   flex: 0 0 13.75rem;
   height: 17rem;
-  margin: 8px;
-  border-radius: 10px;
+  margin: 0.5rem;
+  border-radius: 0.625rem;
   text-decoration: none;
   color: black;
 }
@@ -11,8 +11,8 @@
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  height: 24px;
-  padding: 8px 8px 0px 0px;
+  height: 1.5rem;
+  padding: 0.5rem 0.5rem 0rem 0rem;
 }
 
 .item__info * {
@@ -23,39 +23,39 @@
 
 .item__photo {
   justify-content: center;
-  margin-top: 8px;
-  height: 140px;
+  margin-top: 0.5rem;
+  height: 8.75rem;
 }
 
 .item__photo img {
-  width: 59px;
+  width: 3.6875rem;
 }
 
 .item__name {
   text-align: center;
   justify-content: center;
-  margin: 0px;
-  height: 40px;
+  margin: 0rem;
+  height: 2.5rem;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 1.125rem;
+  line-height: 1.3125rem;
 }
 
 .item__price {
   justify-content: center;
-  margin: 0px;
-  height: 20px;
+  margin: 0rem;
+  height: 1.25rem;
   text-align: center;
 }
 
 .item:hover {
   transition: 0.5s background-color;
   background: var(--bg-color);
-  box-shadow: 2px 2px 5px var(--shadow-color);
+  box-shadow: 0.125rem 0.125rem 0.3125rem var(--shadow-color);
 }
 
-@media (max-width: 550px) {
+@media (max-width: 34.375rem) {
   .item {
-    flex: 0 0 155px;
+    flex: 0 0 9.6875rem;
   }
 }
