--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
-  height: 40px;
-  margin: 16px 24px;
+  height: 2.5rem;
+  margin: 1rem 1.5rem;
   align-items: center;
   justify-content: space-between;
 }
@@ -9,32 +9,32 @@
 .header .search-field {
   display: flex;
   align-items: center;
-  width: 300px;
-  height: 40px;
+  width: 18.75rem;
+  height: 2.5rem;
 }
 
 .header .search-field:hover {
   transition: 0.5s background-color;
   background: var(--bg-color);
-  box-shadow: 2px 2px 5px var(--shadow-color);
+  box-shadow: 0.125rem 0.125rem 0.3125rem var(--shadow-color);
 }
 
 .header .search-field__search-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 24px;
-  height: 24px;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .header .search-field__search-input {
   background-color: transparent;
-  margin-left: 8px;
+  margin-left: 0.5rem;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  border: 0px;
+  font-size: 0.875rem;
+  line-height: 1rem;
+  border: 0rem;
   outline: none;
 }
 
@@ -44,35 +44,35 @@
 
 .header .nav-icons * {
   display: flex;
-  width: 20px;
-  height: 20px;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .header .nav-icons__cart:hover {
   transition: 0.5s background-color;
   background: var(--bg-color-darker);
-  box-shadow: 2px 2px 5px var(--shadow-color);
-  border-radius: 2px;
+  box-shadow: 0.125rem 0.125rem 0.3125rem var(--shadow-color);
+  border-radius: 0.125rem;
 }
 
 .header .nav-icons__account:hover {
   transition: 0.5s background-color;
   background: var(--bg-color-darker);
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
-  border-radius: 2px;
+  box-shadow: 0.125rem 0.125rem 0.3125rem #00000026;
+  border-radius: 0.125rem;
 }
 
 .header .nav-icons__cart {
   justify-content: center;
   align-items: center;
-  width: 24px;
-  height: 24px;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .header .nav-icons__account {
   align-items: center;
   justify-content: center;
-  width: 24px;
-  height: 24px;
-  margin-left: 16px;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: 1rem;
 }
